[metadata]
version = 2.0.0
name = bioexplorer
summary = Blue Brain BioExplorer python API
long_description = file: README.md
long_description_content_type = text/markdown
home-page = https://github.com/BlueBrain/BioExplorer
author = Cyrille Favreau
author-email = bbp-open-source@googlegroups.com
license = Apache 2.0
classifier =
Development Status :: 4 - Beta
Operating System :: OS Independent
Programming Language :: Python :: 3.8
Topic :: Software Development :: Libraries :: Python Modules
keywords = covid, covid19, coronavirus, bbp, blue, brain, virus, molecule, molecular system

[pycodestyle]
max-line-length = 100

[pydocstyle]
ignore = D203,D212,D400,D401

[coverage:report]
show_missing = True
